# the-agent

./: .eslintrc.js  .gitignore  .lintstagedrc.js  .pre-commit-config.yaml  .prettierignore  Procfile  README.md  RULES.md  health-check.sh  nixpacks.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  railway-test.sh  railway.toml  requirements.txt  setup-railway.sh  start-services.sh  test_chat_interactive.py
.husky/: pre-commit
ai-companion/: pyproject.toml
ai_companion/: main.py
api-cf/: .eslintrc.js  .lintstagedrc.js  LICENSE  LocalSetup.md  README.md  apitest.http  package.json  pnpm-lock.yaml  tsconfig.json  worker-configuration.d.ts  wrangler.toml  wrangler.toml.example
backend/: .env.example  .flake8  .gitignore  Dockerfile  README.md  RULES.md  __init__.py  config.py  install_deps.sh  main.py  pyproject.toml  requirements-railway.txt  requirements.txt  run.py  schemas.py  start.sh  test_api.py  test_client.py  test_tg_api.py  test_tg_embeddings.py  test_vector_query.py  test_vector_search.py
backend/edge_agent/: init_db.py  main.py
backend/edge_agent/api/: app.py  routes.py  tg_routes.py
backend/edge_agent/api/memory/: manager.py
backend/edge_agent/core/: config.py  openrouter.py
backend/edge_agent/models/: __init__.py  database.py
backend/edge_agent/models/migrations/: create_message_embeddings.sql  init_pgvector.sql
backend/edge_agent/models/sql/: create_indexes.sql
backend/edge_agent/scripts/: install_pgvector.py  migrate.py
backend/edge_agent/utils/: database.py  db_sync.py  embedding.py  embeddings.py
backend/routes/: __init__.py  chat.py
backend/schemas/: __init__.py
backend/services/: llm_client.py
backend/the_agent/api/: routes.py
backend/the_agent/core/: config.py  openrouter.py
backend/the_agent/utils/: validators.py
docs/: telegram_api_design.md  telegram_api_implementation.md  telegram_api_test_instructions.md
extension/: .env.example  .gitignore  (+19 more)
(+370 files in other folders)
